# qurrium_quam_libs

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  classical_shadow.html  genindex.html  index.html  objects.inv  other_version.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: classical_shadow.doctree  index.doctree  other_version.doctree
.doctrees/api/: index.doctree  version.doctree
.github/actions/: README.md
.github/actions/test-unit/: action.yml
.github/workflows/: release.yml  test.yml  wheel-build.yml
_downloads/f92cf05f29bcf6f220535b847a106622/: qurrium_quam_libs-0.1.1-py3-none-any.whl
_modules/: index.html
_modules/qurrium_quam_libs/: classical_shadow.html
_sources/: classical_shadow.ipynb  other_version.md
_sources/api/: classical_shadow.md
_static/: qurrium_quam_libs-0.0.1-py3-none-any.whl
api/: classical_shadow.html  index.html  version.html
docs/: classical_shadow.ipynb  conf.py  deploy.py  index.md  requirements.txt
docs/_static/: custom.css
docs/api/: classical_shadow.md  index.md  version.md
qurrium_quam_libs/: __init__.py  classical_shadow.py  utils.py  version.py
tools/: README.md  package_name.txt  set_version_3div.py
