[build-system]
requires = ["pytest", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qurrium_quam_libs"
dynamic = ["version", "readme", "dependencies"]
description = "Qurrium Qua Libraries Crossroads - A Format Transformation Toolkit"
authors = [{ name = "Huai-Chung Chang", email = "harui2019@proton.me" }]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"

[project.urls]
Issues = "https://github.com/qurrium/qurrium_quam_libs/issues"
Homepage = "https://github.com/qurrium/qurrium_quam_libs"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "qurrium_quam_libs/VERSION.txt" }
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = { file = "requirements.txt" }

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
